k8s/folders-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: folders-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: folder-server
  template:
    metadata:
      labels:
        component: folder-server
    spec:
      containers:
        -
          name: folders-backend
          image: d0rka/graphs-folders-microservice_folders
          ports:
            -
              containerPort: 5001
