k8s/graphs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphs-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: graph-server
  template:
    metadata:
      labels:
        component: graph-server
    spec:
      containers:
        -
          name: graphs-backend
          image: d0rka/graphs-folders-microservice_graphs
          ports:
            -
              containerPort: 4001
