k8s/graphs-folders-analytics-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphs-folders-analytics-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: graphs-folders-analytics-server
  template:
    metadata:
      labels:
        component: graphs-folders-analytics-server
    spec:
      containers:
        - name: graphs-folders-analytics-backend
          image: d0rka/graphs-folders-microservice_graphs-folders-analytics
          ports:
            - containerPort: 7001
