k8s/jobs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobs-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: job-server
  template:
    metadata:
      labels:
        component: job-server
    spec:
      containers:
        -
          name: jobs-backend
          image: d0rka/graphs-folders-microservice_jobs
          ports:
            -
              containerPort: 6001
