k8s/ksql-queries-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ksql-queries-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: ksql-queries-server
  template:
    metadata:
      labels:
        component: ksql-queries-server
    spec:
      containers:
        -
          name: ksql-queries-backend
          image: d0rka/graphs-folders-microservice_ksql-queries
          ports:
            -
              containerPort: 5600
