k8s/nats-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: nats
  template:
    metadata:
      labels:
        component: nats
    spec:
      containers:
        -
          name: nats
          image: nats
          command: ['/nats-server']
          args: ['-c', 'nats-server.conf', '-DV']
          ports:
            -
              containerPort: 4222
            -
              containerPort: 6222
            -
              containerPort: 8222
