k8s/outputs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: outputs-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: output-server
  template:
    metadata:
      labels:
        component: output-server
    spec:
      containers:
        -
          name: outputs-backend
          image: d0rka/graphs-folders-microservice_outputs
          ports:
            -
              containerPort: 6001
