k8s/folders-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: folders-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: folder-server
  ports:
    -
      name: web-server
      port: 5001
      targetPort: 5001
    -
      name: microservice
      port: 5000
      targetPort: 5000
