k8s/graphs-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graphs-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: graph-server
  ports:
    -
      name: web-server
      port: 4001
      targetPort: 4001
    -
      name: microservice
      port: 4000
      targetPort: 4000
