k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service-main
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    -
      http:
        paths:
          -
            path: /graphs
            backend:
              serviceName: graphs-cluster-ip-service
              servicePort: 4001
          -
            path: /folders
            backend:
              serviceName: folders-cluster-ip-service
              servicePort: 5001
          -
            path: /
            backend:
              serviceName: my-kafka-cp-control-center
              servicePort: 9021
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service-search-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    -
      http:
        paths:
          -
            path: /search(/|$)(.*)
            backend:
              serviceName: my-elasticsearch-client
              servicePort: 9200
          -
            path: /connectors(/|$)(.*)
            backend:
              serviceName: my-kafka-cp-kafka-connect
              servicePort: 8083
          -
            path: /sr(/|$)(.*)
            backend:
              serviceName: my-kafka-cp-schema-registry
              servicePort: 8081
          -
            path: /ksql(.*)
            backend:
              serviceName: ksql-queries-cluster-ip-service
              servicePort: 5600
          -
            path: /ks(/|$)(.*)
            backend:
              serviceName: my-kafka-cp-ksql-server
              servicePort: 8088
